--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@auth/core": "^0.34.3",
     "@auth/prisma-adapter": "^2.11.1",
+    "@fontsource/plus-jakarta-sans": "^5.2.8",
     "@prisma/client": "^7.0.1",
+    "lucide-react": "^0.555.0",
     "next": "16.0.5",
     "next-auth": "^4.24.13",
     "pg": "^8.16.3",
