--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@fontsource/plus-jakarta-sans": "^5.2.8",
     "@prisma/client": "^7.0.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.555.0",
     "next": "16.0.5",
     "next-auth": "^4.24.13",
