--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "@auth/core": "^0.34.3",
     "@auth/prisma-adapter": "^2.11.1",
     "@fontsource/plus-jakarta-sans": "^5.2.8",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.0.1",
+    "@prisma/extension-accelerate": "^3.0.0",
+    "bcryptjs": "^3.0.3",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.555.0",
     "next": "16.0.5",
@@ -25,9 +29,11 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.22",
+    "baseline-browser-mapping": "^2.9.4",
     "eslint": "^9",
     "eslint-config-next": "16.0.5",
     "postcss": "^8.5.6",
